Bug 54433 - Function `DRI2UpdatePrime' implicitly converted to pointer at ../../src/radeon_dri2.c:582
Summary: Function `DRI2UpdatePrime' implicitly converted to pointer at ../../src/radeo...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-03 12:22 UTC by Fabio Pedretti
Modified: 2012-09-04 08:19 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Fabio Pedretti 2012-09-03 12:22:55 UTC
When building debian package for current git ati I get this:
Function `DRI2UpdatePrime' implicitly converted to pointer at ../../src/radeon_dri2.c:582

This is considered an error by the debian build system:

Our automated build log filter detected the problem(s) above that will
likely cause your package to segfault on architectures where the size of
a pointer is greater than the size of an integer, such as ia64 and amd64.
This is often due to a missing function prototype definition.
Since use of implicitly converted pointers is always fatal to the application
on ia64, they are errors.  Please correct them for your next upload.
More information can be found at:
http://wiki.debian.org/ImplicitPointerConversions

Full log at:
https://launchpadlibrarian.net/114656107/buildlog_ubuntu-precise-amd64.xserver-xorg-video-ati_1%3A6.99.99%2Bgit1209031354.75c1f6~gd~p_FAILEDTOBUILD.txt.gz
Comment 1 Dave Airlie 2012-09-04 08:19:34 UTC
should be fixed in master now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.