radeon/dri2: fix build against older servers.

Older servers won't have DRI2UpdatePrime, so fix build.

bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=54433
Signed-off-by: Dave Airlie <airlied@redhat.com>